change the same line

--- a/index1.html
+++ b/index1.html
@@ -14,5 +14,6 @@
 <p class="p1">&lt;html&gt;</p>
 <p class="p1">Hi&lt;/html&gt;</p>
 ADDED COMMENTS
+ATTEMP TO CHANGE THE SAME LINE
 </body>
 </html>
